<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.visit.visit_forms.VisitFormFragment4"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textSize="24sp"
        android:text="@string/page4_of_4"
        android:textStyle="bold"
        android:layout_margin="8dp"/>
    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/question_or_comment"/>
    <EditText
        android:id="@+id/edit_text_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:padding="@dimen/margin_8dp"
        android:layout_marginHorizontal="@dimen/margin_8dp"
        android:inputType="text|textMultiLine|textCapSentences"
        android:gravity="start"
        android:singleLine="false"
        android:hint="@string/hint_feedback"
        android:background="@drawable/edit_text_rounded_corner"
        />

    <Button
        android:id="@+id/submit_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="72dp"
        android:textAllCaps="false"
        android:text="@string/button_submit_visit_log"/>
</LinearLayout>
</ScrollView>