<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size20"
        android:layout_margin="@dimen/margin_16dp"
        android:text=".." />
    <Button
        android:id="@+id/user_button_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:layout_gravity="center"
        android:text="@string/user_button_sign_out"/>

    <Button
        android:id="@+id/user_button_remove_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:layout_gravity="center"
        android:text="@string/user_button_remove_account" />

    <Button
        android:id="@+id/user_button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:layout_gravity="center"
        android:text="@string/user_button_sign_up" />

    <Button
        android:id="@+id/user_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:layout_gravity="center"
        android:text="@string/user_button_login" />

    <Button
        android:id="@+id/btnEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:layout_gravity="center"
        android:text="Events" />


</LinearLayout>