<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        tools:context=".ui.visit.visit_forms.VisitFormFragment2">

        <TextView
            android:id="@+id/page_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:layout_margin="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/page2_of_4"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_quiz1"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/page_no"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:text="@string/outreach_quiz1"
            android:textAlignment="center"
            android:textSize="@dimen/text_size20"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_quiz1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/range_slider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/tv_hours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/hours_spent"
                android:textSize="@dimen/text_size16" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_quiz2"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/outreach_quiz2"
            android:textAlignment="center"
            android:textSize="@dimen/text_size20"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_quiz2"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_yes"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/yes"
                android:textColor="@color/black" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_no"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/no"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_undecided"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/undecided"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_quiz3"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:text="@string/outreach_quiz3"
            android:textAlignment="center"
            android:textSize="@dimen/text_size20"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_quiz3"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/decrease_no_of_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button"
                android:padding="12dp"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/tv_no_of_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/oval_text_view"
                android:text="@string/default_value"
                android:textAlignment="center"
                android:textSize="24dp" />

            <Button
                android:id="@+id/increase_no_of_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button"
                android:padding="12dp"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_go_to_page3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="72dp"
            android:text="@string/next_button" />
    </RelativeLayout>
</ScrollView>