<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:context=".ui.visit.visit_forms.Step1VisitFormFragment"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:text="@string/page1_of_4"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/page_1_visit_content"
            android:textColor="@color/gray700"
            android:textSize="@dimen/text_size20" />

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/where_was_your_visit"
            android:textSize="@dimen/text_size20"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/location"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="0"
            android:hint="@string/enter_location"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/when_was_visit"
            android:textSize="@dimen/text_size20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_set_date"
            style="@style/TextAppearance.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_calendar__textview"
            android:padding="@dimen/padding_16dp"
            android:drawablePadding="@dimen/padding_8dp"
            android:tooltipText="8/30/2022"
            android:drawableLeft="@drawable/ic_calendar_today_24"
            android:textStyle="bold"
            android:textSize="@dimen/text_size20"/>




        <Button
            android:id="@+id/btn_go_to_page2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="72dp"
            android:text="Next" />


    </LinearLayout>
</ScrollView>