<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray700"
            android:layout_marginTop="20dp"
            android:text="@string/recent_visit_log"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textAlignment="center"/>

<ScrollView android:layout_width="match_parent"
android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:src="@drawable/visit_log_hail_24"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp" />
    <TextView
        android:id="@+id/visit_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="10dp"
        android:textColor="@color/gray700"
        android:text="@string/no_log_message"
        android:layout_margin="8dp"
        android:textSize="@dimen/text_size16"/>
    <Button
        android:id="@+id/submit_visit_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:textSize="@dimen/text_size16"
        android:textColor="@color/gray700"
        android:layout_gravity="center"
        android:textStyle="bold"/>
</LinearLayout>

</ScrollView>
</LinearLayout>

