<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.visit.visit_forms.VisitFormFragment3"
    android:layout_margin="8dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textSize="24sp"
        android:text="@string/page3_of_4"
        android:textStyle="bold"
        android:layout_margin="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/outreach_experience"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn_satisfied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_sentiment_very_satisfied_24"
            android:layout_weight="1"
            android:padding="24dp"/>
        <ImageButton
            android:id="@+id/btn_neutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="24dp"
            android:src="@drawable/ic_baseline_sentiment_neutral_24"/>
        <ImageButton
            android:id="@+id/btn_dissatisfied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="24dp"
            android:src="@drawable/ic_baseline_sentiment_very_dissatisfied_24"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_go_to_page4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="72dp"
            android:text="@string/next_button" />


    </LinearLayout>

</FrameLayout>